# Carbon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Carbon/: BinaryIOStreamBase.hpp  Carbon.hpp  Concurrency.hpp  Config.hpp  Dll.hpp  DynamicLibrary.hpp  Format.h  Log.hpp  Math.hpp  Mpl.hpp  Task.hpp  ThreadPool.hpp
Carbon/Concurrency/: LightFuture.hpp  ParallelUtilities.hpp  Thread.h  Threadpool.hpp
Carbon/Config/: ConfigPlatform.hpp
Carbon/LockFree/: Queue.hpp
Details/: CMakeLists.txt  ConcurrencyTpCommon.cpp  Dll.cpp  PlatformControl.hpp  ThreadPool.cpp
Details/BinaryIO/: BinaryIOStreamBase.cpp
Details/Posix/: ConcurrencyTpPosix.cpp  DynamicLibraryCPosix.cpp
Details/Windows/: CarbonTargetWindows.hpp  ConcurrencyTpWindows.cpp  DynamicLibraryCWindows.cpp
Docs/: CarbonAPI.md
Include/Carbon/: Format.h
Include/Carbon/Concurrency/: Concurrency.hpp  ParallelUtilities.hpp  Threadpool.hpp
Include/Carbon/Config/: Config.hpp  ConfigCompilerSlang.hpp  ConfigPlatform.hpp
Include/Carbon/Math/: Math.hpp
Include/Carbon/MetaProgramming/Template/: Mpl.hpp
Include/Carbon/System/: Concurrency.hpp
Include/Carbon/System/Concurrency/: LightFuture.hpp  ParallelUtilities.hpp  Promise.hpp  Scheduled.hpp  Synchronization.hpp  Threadpool.hpp
Include/Carbon/System/DynamicLibrary/: DynamicLibrary.hpp
Include/Carbon/System/IO/: AsyncIOConcepts.hpp  SyncIOConcepts.hpp
Include/Carbon/System/IO/Devices/: File.hpp
Include/Carbon/System/IO/IOBase/: BinaryIOStreamBase.hpp  IOSynchronizedFileAccess.hpp
Include/Carbon/System/IO/Views/: RawStreamView.hpp
Include/Carbon/System/Memory/: ReferenceCounted.hpp
Libraries/: CMakeLists.txt
Libraries/Carbon/Concurrency/: ConcurrencyTpCommon.cpp  ConcurrencyTpPosix.cpp  ConcurrencyTpWindows.cpp
Libraries/Carbon/System/Concurrency/: ConcurrencyTpPosix.cpp  ConcurrencyTpWindows.cpp  Promise.cpp  Synchronization.cpp
Libraries/Carbon/System/DynamicLibrary/: DynamicLibraryCPosix.cpp  DynamicLibraryCWindows.cpp
Libraries/Carbon/System/IO/Devices/: File.cpp
Libraries/Carbon/System/IO/IOBase/: BinaryIOStreamBase.cpp  IOSynchronizedFileAccess.cpp
Libraries/Carbon/System/IO/Views/: RawStreamView.cpp
Libraries/Carbon/System/Memory/: ReferenceCounted.cpp
Libraries/Carbon/Targets/: CarbonTargetWindows.hpp
Tests/: Tests.cpp
Tests/PrefDiagnostics/: Diagnostics.cpp
details/: CMakeLists.txt  Dll.cpp  LogEntry.cpp  LogPool.cpp  LoggerDetail.hpp  ThreadPool.cpp  common.hpp
details/TppWorker/: Task.cpp  ThreadPool.cpp  TppWindows.cpp
tests/: Tests.cpp
